# 111

./: .gitignore
spark_noetic/: menu.sh
spark_noetic/src/3rd_app/move2grasp/rviz/: spark_gmapping_d435.rviz
spark_noetic/src/spark_app/Background_segmentation_demo/: CMakeLists.txt  README.md  package.xml
spark_noetic/src/spark_app/Gazebo_demo/src/spark1_description/: CMakeLists.txt  package.xml
spark_noetic/src/spark_app/Gazebo_demo/src/spark1_description/config/: joint_names_spark1_description.yaml  motion.yaml
spark_noetic/src/spark_app/Gazebo_demo/src/spark1_description/launch/: spark_gazebo.launch
spark_noetic/src/spark_app/Gazebo_demo/src/spark1_description/rviz/: configment.rviz  gr.rviz
spark_noetic/src/spark_app/Gazebo_demo/src/spark1_description/urdf/: spark1_description (camera).urdf  spark1_description (depth).urdf  spark1_description.csv  spark1_description.urdf
spark_noetic/src/spark_app/spark_tf_arm_move/: CMakeLists.txt  package.xml
spark_noetic/src/spark_app/spark_tf_arm_move/cocoapi-master/PythonAPI/: setup.py
spark_noetic/src/spark_app/spark_tf_arm_move/launch/: spark_tf_arm_move.launch
spark_noetic/src/spark_app/spark_tf_arm_move/nodes/: report.txt  spark_tf_arm_move.py
spark_noetic/src/spark_app/spark_tf_arm_move/nodes/models/: pose_classifier.pth  pose_classifier2.pth
spark_noetic/src/spark_app/spark_tf_arm_move/nodes/tf_pose/: collect.py  estimator.py  gesture_pose.py  network_base.py  runner.py
spark_noetic/src/spark_app/spark_tf_arm_move/nodes/tf_pose/mobilenet/: conv_blocks.py  mobilenet.py  mobilenet_v2.py
(+30 files in other folders)
